Add trace for synchronous time spent in WillStartRequest

I've noticed that these can be a bit slow, but the async traces make
analysis pretty confusing, due to the linked bug.

Bug: 783327
Change-Id: I4d46d715d08ed176bec85b0672b24aab2e2b0022
Reviewed-on: https://chromium-review.googlesource.com/810927
Reviewed-by: Nasko Oskov <nasko@chromium.org>
Commit-Queue: Charlie Harrison <csharrison@chromium.org>
Cr-Commit-Position: refs/heads/master@{#522433}
Former-commit-id: 7d4ed459a193069b1fc1669377e0dc7eba4e27bc